# wiki-categories

./: .gitignore  README.md  build.py  build.sh  pyproject.toml  requirements.txt  run.sh  wiki_categories.nimble
.github/workflows/: upload-pages.yml
categories/: __main__.py  category_parsing.js  cli.py  config.py  gzip_buffer.py  html_indices.py  parse.py  process_categories.py
src/: wiki_categories.nim  wiki_categories.nims
src/wiki_categories/: data.nim  download.nim  extract.nim  gz_inflate_stream.nim
